[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "cmd"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.2"

[[bin]]
bench = false
name = "cmd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive", "env"] }
derive_builder = "0.20.0"
hctoml = { version = "0.1.2", path = "../hctoml" }
serde = "1.0.197"
serde_derive = "1.0.197"
subcommand = { version = "0.1.2", path = "../subcommand" }
thiserror = "1.0.59"
toml = { version = "0.8.12" }
