[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "hctoml"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.2"

[lib]
name = "hctoml"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.59"
toml = "0.8.12"
