[package]
name = "subcommand"
version = "1.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "subcommand"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }



