[package]
name = "subcommand"
version = "1.0.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "subcommand"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.59"



